--- a/reluu.ipynb
+++ b/reluu.ipynb
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1525,38 +1525,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2</th>\n",
        "      <td>Old Spice Shaving Cream - 70 g (Original) - Pa...</td>\n",
        "      <td>https://m.media-amazon.com/images/I/41xHbjdSXJ...</td>\n",
-       "      <td>Is Discontinued By Manufacturer : No, Package ...</td>\n",
+       "      <td>Is Discontinued By Manufacturer : No\\nPackage ...</td>\n",
        "      <td>€8\\n00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>16</th>\n",
        "      <td>Short Story: Violoncello und Klavier. (Cello-B...</td>\n",
        "      <td>https://m.media-amazon.com/images/I/41fD+K43Lc...</td>\n",
        "      <td>Publisher : SCHOTT MUSIC GmbH &amp; Co KG, Mainz (...</td>\n",
        "      <td>from €11.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>17</th>\n",
        "      <td>Short Story: cello and piano.</td>\n",
        "      <td>https://m.media-amazon.com/images/I/41fD+K43Lc...</td>\n",
-       "      <td>Éditeur : Schott (1 janvier 2000), Langue : Fr...</td>\n",
+       "      <td>Éditeur : Schott (1 janvier 2000)\\nLangue : Fr...</td>\n",
        "      <td>à partir de 23,94 €</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>20</th>\n",
        "      <td>Concerto grosso g-Moll: Weihnachtskonzert. op....</td>\n",
        "      <td>https://m.media-amazon.com/images/I/51sNFyf2t6...</td>\n",
        "      <td>Publisher : SCHOTT MUSIC GmbH &amp; Co KG, Mainz (...</td>\n",
        "      <td>€18.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>21</th>\n",
        "      <td>Concerto grosso G Minor: Christmas Concerto. o...</td>\n",
        "      <td>https://m.media-amazon.com/images/I/51sNFyf2t6...</td>\n",
-       "      <td>Éditeur : Schott (1 janvier 2000), Langue : Fr...</td>\n",
+       "      <td>Éditeur : Schott (1 janvier 2000)\\nLangue : Fr...</td>\n",
        "      <td>30,99 €</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1567,38 +1567,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
+       "      <th>847</th>\n",
        "      <td>Stucke(3) op.142 orgue</td>\n",
        "      <td>https://m.media-amazon.com/images/I/71X4rq4PIA...</td>\n",
-       "      <td>Éditeur : BREITKOPF (1 janvier 2000), Langue :...</td>\n",
+       "      <td>Éditeur : BREITKOPF (1 janvier 2000)\\nLangue :...</td>\n",
        "      <td>18,15 €</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
+       "      <th>894</th>\n",
        "      <td>L'ARLESIENNE-SUITE NR. 2 ORCHESTRE</td>\n",
        "      <td>https://m.media-amazon.com/images/I/71NgDgoW-k...</td>\n",
-       "      <td>Publisher : BREITKOPF (1 Jan. 2000), Language ...</td>\n",
+       "      <td>Publisher : BREITKOPF (1 Jan. 2000)\\nLanguage ...</td>\n",
        "      <td>€43.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
+       "      <th>895</th>\n",
        "      <td>L'arlesienne-suite nr. 2 orchestre</td>\n",
        "      <td>https://m.media-amazon.com/images/I/71NgDgoW-k...</td>\n",
-       "      <td>Éditeur : BREITKOPF (1 janvier 2000), Langue :...</td>\n",
+       "      <td>Éditeur : BREITKOPF (1 janvier 2000)\\nLangue :...</td>\n",
        "      <td>52,13 €</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
+       "      <th>910</th>\n",
        "      <td>EIN DEUTSCHES REQUIEM 2 KLAV</td>\n",
        "      <td>https://m.media-amazon.com/images/I/71U21ngbbv...</td>\n",
-       "      <td>Publisher : BREITKOPF (1 Jan. 2000), Language ...</td>\n",
+       "      <td>Publisher : BREITKOPF (1 Jan. 2000)\\nLanguage ...</td>\n",
        "      <td>€92.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
+       "      <th>911</th>\n",
        "      <td>Ein deutsches requiem 2 klav</td>\n",
        "      <td>https://m.media-amazon.com/images/I/71U21ngbbv...</td>\n",
-       "      <td>Éditeur : BREITKOPF (1 janvier 2000), Langue :...</td>\n",
+       "      <td>Éditeur : BREITKOPF (1 janvier 2000)\\nLangue :...</td>\n",
        "      <td>à partir de 205,99 €</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1607,55 +1607,106 @@
        "</div>"
       ],
       "text/plain": [
-       "                                        product_title  \\\n",
-       "0   Old Spice Shaving Cream - 70 g (Original) - Pa...   \n",
-       "1   Short Story: Violoncello und Klavier. (Cello-B...   \n",
-       "2                       Short Story: cello and piano.   \n",
-       "3   Concerto grosso g-Moll: Weihnachtskonzert. op....   \n",
-       "4   Concerto grosso G Minor: Christmas Concerto. o...   \n",
-       "..                                                ...   \n",
-       "88                             Stucke(3) op.142 orgue   \n",
-       "89                 L'ARLESIENNE-SUITE NR. 2 ORCHESTRE   \n",
-       "90                 L'arlesienne-suite nr. 2 orchestre   \n",
-       "91                       EIN DEUTSCHES REQUIEM 2 KLAV   \n",
-       "92                       Ein deutsches requiem 2 klav   \n",
+       "                                         product_title  \\\n",
+       "2    Old Spice Shaving Cream - 70 g (Original) - Pa...   \n",
+       "16   Short Story: Violoncello und Klavier. (Cello-B...   \n",
+       "17                       Short Story: cello and piano.   \n",
+       "20   Concerto grosso g-Moll: Weihnachtskonzert. op....   \n",
+       "21   Concerto grosso G Minor: Christmas Concerto. o...   \n",
+       "..                                                 ...   \n",
+       "847                             Stucke(3) op.142 orgue   \n",
+       "894                 L'ARLESIENNE-SUITE NR. 2 ORCHESTRE   \n",
+       "895                 L'arlesienne-suite nr. 2 orchestre   \n",
+       "910                       EIN DEUTSCHES REQUIEM 2 KLAV   \n",
+       "911                       Ein deutsches requiem 2 klav   \n",
        "\n",
-       "                                    product_image_url  \\\n",
-       "0   https://m.media-amazon.com/images/I/41xHbjdSXJ...   \n",
-       "1   https://m.media-amazon.com/images/I/41fD+K43Lc...   \n",
-       "2   https://m.media-amazon.com/images/I/41fD+K43Lc...   \n",
-       "3   https://m.media-amazon.com/images/I/51sNFyf2t6...   \n",
-       "4   https://m.media-amazon.com/images/I/51sNFyf2t6...   \n",
-       "..                                                ...   \n",
-       "88  https://m.media-amazon.com/images/I/71X4rq4PIA...   \n",
-       "89  https://m.media-amazon.com/images/I/71NgDgoW-k...   \n",
-       "90  https://m.media-amazon.com/images/I/71NgDgoW-k...   \n",
-       "91  https://m.media-amazon.com/images/I/71U21ngbbv...   \n",
-       "92  https://m.media-amazon.com/images/I/71U21ngbbv...   \n",
+       "                                     product_image_url  \\\n",
+       "2    https://m.media-amazon.com/images/I/41xHbjdSXJ...   \n",
+       "16   https://m.media-amazon.com/images/I/41fD+K43Lc...   \n",
+       "17   https://m.media-amazon.com/images/I/41fD+K43Lc...   \n",
+       "20   https://m.media-amazon.com/images/I/51sNFyf2t6...   \n",
+       "21   https://m.media-amazon.com/images/I/51sNFyf2t6...   \n",
+       "..                                                 ...   \n",
+       "847  https://m.media-amazon.com/images/I/71X4rq4PIA...   \n",
+       "894  https://m.media-amazon.com/images/I/71NgDgoW-k...   \n",
+       "895  https://m.media-amazon.com/images/I/71NgDgoW-k...   \n",
+       "910  https://m.media-amazon.com/images/I/71U21ngbbv...   \n",
+       "911  https://m.media-amazon.com/images/I/71U21ngbbv...   \n",
        "\n",
-       "                                      product_details         product_price  \n",
-       "0   Is Discontinued By Manufacturer : No, Package ...                €8\\n00  \n",
-       "1   Publisher : SCHOTT MUSIC GmbH & Co KG, Mainz (...           from €11.50  \n",
-       "2   Éditeur : Schott (1 janvier 2000), Langue : Fr...   à partir de 23,94 €  \n",
-       "3   Publisher : SCHOTT MUSIC GmbH & Co KG, Mainz (...                €18.00  \n",
-       "4   Éditeur : Schott (1 janvier 2000), Langue : Fr...               30,99 €  \n",
-       "..                                                ...                   ...  \n",
-       "88  Éditeur : BREITKOPF (1 janvier 2000), Langue :...               18,15 €  \n",
-       "89  Publisher : BREITKOPF (1 Jan. 2000), Language ...                €43.60  \n",
-       "90  Éditeur : BREITKOPF (1 janvier 2000), Langue :...               52,13 €  \n",
-       "91  Publisher : BREITKOPF (1 Jan. 2000), Language ...                €92.00  \n",
-       "92  Éditeur : BREITKOPF (1 janvier 2000), Langue :...  à partir de 205,99 €  \n",
+       "                                       product_details         product_price  \n",
+       "2    Is Discontinued By Manufacturer : No\\nPackage ...                €8\\n00  \n",
+       "16   Publisher : SCHOTT MUSIC GmbH & Co KG, Mainz (...           from €11.50  \n",
+       "17   Éditeur : Schott (1 janvier 2000)\\nLangue : Fr...   à partir de 23,94 €  \n",
+       "20   Publisher : SCHOTT MUSIC GmbH & Co KG, Mainz (...                €18.00  \n",
+       "21   Éditeur : Schott (1 janvier 2000)\\nLangue : Fr...               30,99 €  \n",
+       "..                                                 ...                   ...  \n",
+       "847  Éditeur : BREITKOPF (1 janvier 2000)\\nLangue :...               18,15 €  \n",
+       "894  Publisher : BREITKOPF (1 Jan. 2000)\\nLanguage ...                €43.60  \n",
+       "895  Éditeur : BREITKOPF (1 janvier 2000)\\nLangue :...               52,13 €  \n",
+       "910  Publisher : BREITKOPF (1 Jan. 2000)\\nLanguage ...                €92.00  \n",
+       "911  Éditeur : BREITKOPF (1 janvier 2000)\\nLangue :...  à partir de 205,99 €  \n",
        "\n",
        "[93 rows x 4 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'DESKTOP-92USQB8', 'cluster_name': 'elasticsearch', 'cluster_uuid': 'v071lW7iRCGj6iQrac2Vsw', 'version': {'number': '8.7.0', 'build_flavor': 'default', 'build_type': 'zip', 'build_hash': '09520b59b6bc1057340b55750186466ea715e30e', 'build_date': '2023-03-27T16:31:09.816451435Z', 'build_snapshot': False, 'lucene_version': '9.5.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from elasticsearch import Elasticsearch\n",
+    "es = Elasticsearch(hosts=[\"https://localhost:9200\"], basic_auth=['elastic', '6TsTDCFqEuLyR8UdykMi'], verify_certs=False)\n",
+    "print(es.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vkray\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\elasticsearch\\_sync\\client\\__init__.py:395: SecurityWarning: Connecting to 'https://127.0.0.1:9200' using TLS with verify_certs=False is insecure\n",
+      "  _transport = transport_class(\n",
+      "C:\\Users\\vkray\\AppData\\Local\\Temp\\ipykernel_10184\\2321691583.py:17: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use the 'document' parameter. See https://github.com/elastic/elasticsearch-py/issues/1698 for more information\n",
+      "  es.index(index=index_name, body=doc)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from elasticsearch import Elasticsearch\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "es = Elasticsearch(['https://127.0.0.1:9200'],basic_auth=['elastic', '6TsTDCFqEuLyR8UdykMi'], verify_certs=False)\n",
+    "\n",
+    "index_name = \"amazdata\"\n",
+    "\n",
+    "\n",
+    "data1 = data.to_dict(orient='records')\n",
+    "\n",
+    "for doc in data1:\n",
+    "    es.index(index=index_name, body=doc)\n"
    ]
   },
   {
